--- a/myunitydotsexperiments/Packages/manifest.json
+++ b/myunitydotsexperiments/Packages/manifest.json
@@ -8,6 +8,7 @@
     "com.unity.ide.vscode": "1.2.4",
     "com.unity.inputsystem": "1.3.0",
     "com.unity.physics": "0.6.0-preview.3",
+    "com.unity.platforms.linux": "0.10.0-preview.10",
     "com.unity.render-pipelines.universal": "10.8.1",
     "com.unity.rendering.hybrid": "0.11.0-preview.44",
     "com.unity.test-framework": "1.1.29",
